--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,3 +7,11 @@ body {
 canvas {
   background-color: DarkBlue;
 }
+
+#superSekritHiddenDiv {
+  visibility: hidden;
+}
+
+div {
+  text-align: left;
+}
